<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:key="@string/pref_settings_key"
    android:title="@string/pref_settings_title">

    <ListPreference
      android:key="@string/pref_homepage_key"
      android:title="@string/pref_homepage_title"
      android:summary="@string/pref_homepage_summary"
      android:entries="@array/pref_homepage_array_names"
      android:entryValues="@array/pref_homepage_array_values"
      android:defaultValue="@string/pref_homepage_default" />

    <ListPreference
      android:key="@string/pref_badssl_pageloadbehavior_key"
      android:title="@string/pref_badssl_pageloadbehavior_title"
      android:summary="@string/pref_badssl_pageloadbehavior_summary"
      android:entries="@array/pref_pageloadbehavior_array_names"
      android:entryValues="@array/pref_pageloadbehavior_array_values"
      android:defaultValue="@string/pref_badssl_pageloadbehavior_default" />

    <EditTextPreference
      android:key="@string/pref_updateinterval_key"
      android:title="@string/pref_updateinterval_title"
      android:summary="@string/pref_updateinterval_summary"
      android:inputType="number"
      android:numeric="integer"
      android:maxLength="3"
      android:defaultValue="@string/pref_updateinterval_default" />

    <EditTextPreference
      android:key="@string/pref_sharedsecret_key"
      android:title="@string/pref_sharedsecret_title"
      android:summary="@string/pref_sharedsecret_summary"
      android:inputType="text"
      android:defaultValue="" />

  </PreferenceCategory>
</PreferenceScreen>
