<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <!-- description -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testpatternactivity_description"/>

        <!-- horizontal row -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="20dip"
            android:background="#c0c0c0"/>

        <!-- pattern (glob or regex) as used by: @include, @exclude, and @match -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testpatternactivity_label_pattern"/>
        <EditText
            android:id="@+id/patternField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"
            android:inputType="text"/>

        <!-- URL subject -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testpatternactivity_label_url"/>
        <EditText
            android:id="@+id/urlField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"
            android:inputType="text"/>

        <Button
            android:id="@+id/executeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testpatternactivity_label_button" />

    </LinearLayout>

</ScrollView>
